#153 - (fix) 종목톡 참여 카운트 불일치와 입장 시 최근 메시지 전송 실패 가능성 수정
- 방의 참여 카운트를 세션 기록이 실제로 바뀔 때만 증감하도록 변경
  - 같은 세션의 중복 입장 요청: 카운트를 올리지 않고 최근 메시지만 재전송 (연결 종료 후 유령 참여자가 남던 문제)
  - 입장한 적 없는 세션의 퇴장 요청: 무시 (같은 사용자의 다른 탭 참여가 해제되던 문제)
- StockTalkSessionRegistry.registerJoin/registerLeave가 실제 변경 여부를 반환하도록 변경
- StockTalkService에서 최근 메시지 전송을 sendHistory로 분리
- StockTalkRoom.getRecentMessages가 원본 뷰 대신 복사본을 반환하도록 변경(대화 중 입장 시 응답 직렬화 단계에서 ConcurrentModificationException으로 최근 메시지 전송이 실패할 수 있었음)